--- a/style.css
+++ b/style.css
@@ -15,13 +15,14 @@ h1{
 }
 section{
     display: flex;
+    margin-bottom: 150px;
 }
 .half-width{
     width: 50%;
     padding: 5%;
 }
 .half-width img{
-    width: 80%;
+    width: 100%;
     height: 70%;
 }
 .link-button{
@@ -31,4 +32,9 @@ section{
     color: white;
     font-weight: 700;
     border-radius: 5px;
+}
+.dream-big{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right
 }
