--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ body{
 h1{
     font-size: 50px;
 }
+h2{
+    font-size: 40px;
+}
 .top-bannar{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
@@ -13,7 +16,7 @@ h1{
 .orange-colour{
     color: orange;
 }
-section{
+.flexible-container{
     display: flex;
     margin-bottom: 150px;
 }
@@ -37,4 +40,11 @@ section{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right
+}
+.experience-item{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding: 5%%;
+    box-shadow: 10px 20px 40px gray;
 }
