--- a/style.css
+++ b/style.css
@@ -45,6 +45,19 @@ h2{
     width: 40%;
     margin-left: 5%;
     margin-right: 5%;
-    padding: 5%%;
+    padding: 5%;
     box-shadow: 10px 20px 40px gray;
+}
+#full-web{
+    border-left: 8px solid;
+    border-image: linear-gradient(purple,tomato);
+    border-image-slice: 1;
+}
+#baby-web{
+    border-left: 8px solid;
+    border-image: linear-gradient(blue,cyan);
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
 }
